--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <script>
     function cek() {
       var passwordBenar = "@Bkl0306#";   // GANTI PASSWORD
-      var tujuan = "https://www.icloud.com/sharedalbum/#B1qJtdOXmRgk9Lq"; // GANTI LINK
+      var tujuan = "https://www.icloud.com/sharedalbum/#B1q532ODWKyb0qy"; // GANTI LINK
 
       var input = document.getElementById("pw").value;
 
